# knit

./: .gitignore  Cargo.toml  LICENSE  Makefile  alloc.c  alloc.h  bash-trace  build-plan  build-unit  cache.c  cache.h  cat-file  check-jobcache  check-plan  clean  close-session  compat.h  compile-plan  compile-plan.c  complete-dispatch  complete-job  complete-production  diagram.dot  dispatch-job  extract-step  flatten-tree  graph-dispatch  graph-production  hash-object  hash.c  hash.h  invocation-to-mdnote  invocation.c  invocation.h  job.c  job.h  knit-assemble-production.c  knit-assemble-production.sh  knit-bash-setup.sh  knit-build-objects.c  (+75 more)
.github/workflows/: build.yml  test.yml
cgi-bin/: input-to-html  inspect  notebook  notebook-save  pipeline  unit  unit-save
flow/basic/: source.unit  tac.unit
flow/composite/: abc.unit  join.unit  upper.unit  xyz.unit
flow/dynamic/: join.unit  make-steps.sh  map-steps.unit  map.unit  split.unit
flow/fail/: baddep.unit  error.unit
flow/frontend/: template  unit
flow/mdnote/: md-to-steps.py  notebook.unit
flow/module/: read.unit  store.unit  write.unit
flow/nested/: cells  compute.unit  inputs-to-steps.sh  inputs.unit
flow/param/: a.unit  ab.unit  b.unit  dir.unit  nested.unit
make/: run.sh
src/: cas.rs  execution.rs  main.rs  object.rs  plan.rs
t/: basic  build  build-taxi  cargo  composite  dynamic  fail  make  make-pattern  module  nested  param  portable  rust  similar  storage  template
tests/: Makefile  basic.sh  build-objects.sh  external.sh  nocache.sh  subflow.sh  test-setup.sh
(+64 files in other folders)
