[package]
name = "knit"
version = "0.0.1"
authors = ["Joe Mou <dev@mou.fo>"]
edition = "2018"
repository = "https://github.com/jmou/knit/"
license = "MIT"

[dependencies]
bstr = "0.2"
chrono = { version = "0.4", features = ["serde"] }
derivative = "2.2"
hex = { version = "0.4", features = ["serde"] }
serde = { version = "~1.0.123", features = ["derive"] }
sha-1 = "0.9.2"
# eyre instead of anyhow because of stable backtrace support
stable-eyre = "0.2"
structopt = { version = "0.3", default-features = false }
strum = { version = "0.20", features = ["derive"] }
tempfile = "3"
thiserror = "1.0"
walkdir = "2"
